--- a/README
+++ b/README
@@ -1,3 +1,3 @@
 THIS SITE IS CREATED UTILIZING:
-FLASK, MYSQL, REDIS, ELASTICSEARCH, DOCKER AND JAVASCRIPT.
+FLASK, MYSQL, REDIS, ELASTICSEARCH, DOCKER AND JQUERY.
 YOU CAN TEST IT YOURSELF RIGHT HERE: http://165.22.90.192/auth/login
